# mailman3-fedmsg-plugin

./: .coveragerc  .gitignore  .packit.yaml  .pre-commit-config.yaml  CHANGELOG.rst  README.md  README.rst  config.toml.example  mailman3_fedmsg_plugin.py  pyproject.toml  setup.cfg  setup.py  tox.ini  unittest.cfg
.github/workflows/: main.yml
.reuse/: dep5
mailman3_fedmsg_plugin/: __init__.py
mailman3_fedmsg_plugin/tests/: test_archiver.py
mailman_schema/: .coveragerc  .gitignore  MANIFEST.in  README  pyproject.toml  setup.cfg  setup.py  tox.ini
mailman_schema/fedora_messaging_schemas/mailman/: schemas.py
mailman_schema/fedora_messaging_schemas/mailman/tests/: test_schema.py
mailman_schema/mailman3_fedmsg_plugin_schemas/: __init__.py  schemas.py
tests/: test_archiver.py  test_schema.py
